syntax = "proto3";

package toggle.v1;

option go_package = "github.com/programmablemike/toggle/gen/go/toggle/v1;togglev1";

service ToggleService {
    rpc CreateScope(CreateScopeRequest) returns (CreateScopeResponse) {}
}

// General use types
message Scope {
    string scope_id = 1;
    string name = 2;
    string description = 3;
}

// CreateScope
message CreateScopeRequest {}
message CreateScopeResponse {}